fix: nav menu z-index update

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,7 +1,7 @@
 .nav-menu {
   position: fixed;
   inset-block: 0;
-  z-index: 1;
+  z-index: 10;
   left: -100%;
   background-color: var(--container-color);
   width: 100%;
